# Rust-Empire-Simulation

./: .gitignore  README.md
Map_Simulator_Optimized/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Map_Simulator_Optimized/public/resources/maps/: africa.txt  east_asia.txt  europe.txt  middle_east.txt  scandinavia.txt  south_america.txt  west_mediteranean.txt  world.txt
Map_Simulator_Optimized/src/: App.css  App.tsx  index.css
Map_Simulator_Optimized/src/assets/: initials.ts  utils.ts
Map_Simulator_Optimized/src/components/: ColorInput.tsx  MapDistance.tsx  MapLayer.tsx  MapOwnership.tsx  MapPanel.tsx  Navbar.tsx  SelectType.tsx  SettingsEditor.tsx  SettingsPanel.tsx  Slider.tsx
Map_Simulator_Optimized/src/components/MapLayers/: EventsLayer.tsx  MapDistance.tsx  MapLayer.tsx  MapOwnership.tsx  MapValue.tsx
Map_Simulator_Optimized/src/components/SettingsLayers/: SettingsEditor.tsx  SettingsSimulation.tsx
Map_Simulator_Optimized/src/context/: Context.tsx
Map_Simulator_Optimized/src/pages/: GamePage.tsx
Map_Simulator_Optimized/src/styles/: GamePage.css  MapPanel.css  NavBar.css  SettingsPanel.css  Slider.css
Map_Simulator_Optimized/src/types/: types.ts
Map_Simulator_Optimized/src/utils/: useEditorInput.ts  useSimulationInput.ts
rust_simulator/: Cargo.toml
rust_simulator/.cargo/: config.toml
rust_simulator/src/: lib.rs  utlis.rs
